# batalla_naval

./: .gitignore  batalla_naval.db.bak  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  trunk.tar
.cursor/plans/: plan-testing-analisis-tipos-cobertura.md
batalla_naval/: settings.py  urls.py  wsgi.py
bn/: admin.py  celda.py  decoradores.py  excepciones.py  fields.py  forms.py  models.py  tests.py  views.py
bn/migrations/: 0001_initial.py
bn/static/css/: style.css
bn/templatetags/: mytags.py
charlas/: slides.odp
css/: style.css
templates/: 500.html  atacar.html  base.html  celda.html  defender.html  derrotado.html  elegir_enemigo.html  esperando_jugadores.html  esperando_turno.html  ganador.html  login.html  menu_principal.html  nueva_partida.html  nuevo_usuario.html  resultados.html  resultados_ataque.html  ubicacion_barcos.html
trunk/Estructura Templates/: Feedback Proyecto  atacar.html  base.html  defender.html  derrotado.html  footer.html  partida_en_juego_base.html  style.css
trunk/batalla_naval/.svn/: all-wcprops  entries
trunk/batalla_naval/batalla_naval/: settings.py  wsgi.py
trunk/batalla_naval/batalla_naval/.svn/: all-wcprops  entries
trunk/batalla_naval/bn/: celda.py  excepciones.py  fields.py  models.py  tests.py  views.py
trunk/batalla_naval/bn/.svn/: all-wcprops  entries
trunk/batalla_naval/templates/: atacar.html  base.html  celda.html  derrotado.html  elegir_enemigo.html  esperando_jugadores.html  esperando_turno.html  ganador.html  login.html  nuevo_usuario.html  resultados.html
trunk/batalla_naval/templates/.svn/: entries  (+1 more)
(+42 files in other folders)
